# Dialga

./: CMakeLists.txt  Makefile  client.cpp  config.h  config.hpp  global.h  global.hpp  kvstore-rdma.cpp  kvstore-rdma.hpp  kvstore.cc  kvstore.h  kvstore.hpp  rdmatools.cpp  rdmatools.hpp  rkvstore.cpp  sarray.hpp  server.cpp  todo.txt
app/: CMakeLists.txt  Makefile  benchmark.cpp  client.cpp  server.cpp
include/dialga/: config.hpp  kvstore.hpp  range.hpp  sarray.hpp
include/dialga/internal/alloc/: allocator.hpp  system.hpp
include/prism/: spsc_queue.h  thread_proto.h  utils.h
socket/: poll.h
src/: config.cpp  io_worker.hpp  kvserver-tcp.cpp  kvserver-tcp.hpp  kvstore-rdma.cpp  kvstore-rdma.hpp  kvstore-tcp.cpp  kvstore-tcp.hpp  kvstore.cpp  wire.hpp
src/rdma/: rdmatools.cpp  rdmatools.hpp
src/socket/: buffer.h  poll.h  socket.h
tcp/: kvstore-tcp.cc  kvstore-tcp.hpp
